--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
 
 body {
     background: #2C2141;
@@ -5,6 +12,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .main {
@@ -12,5 +20,34 @@ body {
     border-radius: 16px;
     width: 624px;
     margin: 16px;
+    padding: 32px;
+}
 
+.person {}
+
+.person__name {
+    font-size: 36px;
+    margin: 0;
+    font-weight: normal;
+}
+
+.person__link {
+    
+}
+
+.person__position {
+    font-size: 16px;
+    line-height: 22px;
+}
+
+.person__position {
+    font-size: 18px;
+    color: #545454;
+    margin: 0;
+    font-style: italic;
+}
+
+.special {
+    color: #ED6D05;
+    font-weight: normal;
 }
