--- a/style.css
+++ b/style.css
@@ -23,7 +23,29 @@ body {
     padding: 32px;
 }
 
-.person {}
+.person {
+
+}
+
+.person__description {
+    font-size: 16px;
+    line-height: 22px;
+    margin:0;
+}
+
+.person__description--with-margin {
+    margin-bottom:22px;
+}
+
+.person__info {
+    margin-bottom: 24px;
+}
+
+.person__link {
+    color: #E20613;
+    text-decoration: none;
+}
+
 
 .person__name {
     font-size: 36px;
@@ -31,14 +53,6 @@ body {
     font-weight: normal;
 }
 
-.person__link {
-    
-}
-
-.person__position {
-    font-size: 16px;
-    line-height: 22px;
-}
 
 .person__position {
     font-size: 18px;
