--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body {
 }
 
 .person {
-
+    display:flex;
+    align-items: flex-start;
 }
 
 .person__description {
@@ -53,6 +54,9 @@ body {
     font-weight: normal;
 }
 
+.person__picture {
+    margin-right: 32px;
+}
 
 .person__position {
     font-size: 18px;
